@@ -1,6 +1,6 @@
 /************************************************************************
 **
-**  Copyright (C) 2015-2021 Kevin B. Hendricks, Stratford Ontario Canada
+**  Copyright (C) 2015-2023 Kevin B. Hendricks, Stratford Ontario Canada
 **  Copyright (C) 2009-2011 Strahinja Markovic  <strahinja.markovic@gmail.com>
 **
 **  This file is part of Sigil.
@@ -57,6 +57,11 @@ void ClipsWindow::showEvent(QShowEvent *event)
 {
     QDockWidget::showEvent(event);
     raise();
+}
+
+void ClipsWindow::SetFocusOnClips()
+{
+   if (m_TreeView) m_TreeView->setFocus();
 }
 
 void ClipsWindow::SetupTreeView()
