@@ -1,6 +1,8 @@
 pre-2.x.x
     New Features
       - assign menu accelerators P - &Plugins, and K - Chec&kpoints (thank you BeckyEbook)
+      - add ability to change keyboard focus using keyboard shortcuts or menus
+          to BookBrowser, Preview, CodeView, ClipsWindow, and TableOfContents Windows
 
 Sigil-2.0.2
     Bug Fixes
